# fraud-detection

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
app/: streamlit_app.py
notebooks/: 01_eda.ipynb  02_feature_engineering.ipynb  03_modeling.ipynb
src/: __init__.py  config.py  data.py  features.py  model.py  pipeline.py  predict.py  train.py
tests/: test_pipeline.py
