[project]
name = "fraud-detection"
version = "0.1.0"
description = "Production-ready fraud detection pipeline with Streamlit UI"
requires-python = ">=3.12"
dependencies = [
  "joblib>=1.5.3",
  "numpy>=2.0.0",
  "pandas>=2.2.0",
  "scikit-learn>=1.9.0",
  "streamlit>=1.58.0",
  "xgboost>=3.3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
